--- a/Treats/Base.lproj/Main.storyboard
+++ b/Treats/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="AhL-rC-ayR">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="recipeCell" id="AhL-rC-ayR" customClass="RecipeCell" customModule="Treats" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="T5Y-3D-RwF">
@@ -50,6 +50,7 @@
                     <navigationItem key="navigationItem" id="2ho-e4-1u9"/>
                     <connections>
                         <outlet property="collectionView" destination="Mnc-YK-1yL" id="1Ln-Tw-9wC"/>
+                        <segue destination="VvG-ZG-J0x" kind="show" id="Cde-NF-eh7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -63,13 +64,55 @@
                     <view key="view" contentMode="scaleToFill" id="NaH-Oc-yKL">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HVE-i2-slM">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MDp-Mn-aQr">
+                                        <rect key="frame" x="16" y="36" width="382" height="222"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </imageView>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eiZ-HE-dBg">
+                                        <rect key="frame" x="16" y="395" width="382" height="371"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=" 45 Minutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pga-iD-mK2">
+                                        <rect key="frame" x="16" y="266" width="212" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.67843137249999996" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="MDp-Mn-aQr" firstAttribute="leading" secondItem="HVE-i2-slM" secondAttribute="leading" constant="16" id="Es6-Z7-WqY"/>
+                                    <constraint firstAttribute="trailing" secondItem="MDp-Mn-aQr" secondAttribute="trailing" constant="16" id="FCG-Ru-Gn6"/>
+                                    <constraint firstAttribute="trailing" secondItem="eiZ-HE-dBg" secondAttribute="trailing" constant="16" id="aNI-Ka-Bhk"/>
+                                    <constraint firstItem="MDp-Mn-aQr" firstAttribute="top" secondItem="HVE-i2-slM" secondAttribute="top" constant="16" id="jyN-3q-Sd0"/>
+                                    <constraint firstItem="eiZ-HE-dBg" firstAttribute="leading" secondItem="HVE-i2-slM" secondAttribute="leading" constant="16" id="n5V-V9-uNJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="eiZ-HE-dBg" secondAttribute="bottom" constant="16" id="zPA-wd-4v9"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="U7r-q1-j9P"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HVE-i2-slM" firstAttribute="leading" secondItem="U7r-q1-j9P" secondAttribute="leading" id="3kW-kh-mXh"/>
+                            <constraint firstItem="HVE-i2-slM" firstAttribute="top" secondItem="U7r-q1-j9P" secondAttribute="top" id="IHE-dL-4DS"/>
+                            <constraint firstItem="U7r-q1-j9P" firstAttribute="trailing" secondItem="HVE-i2-slM" secondAttribute="trailing" id="j30-Tz-1Le"/>
+                            <constraint firstItem="U7r-q1-j9P" firstAttribute="bottom" secondItem="HVE-i2-slM" secondAttribute="bottom" id="oCP-fM-zDo"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="FOh-LX-g2m"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kjL-4r-9eg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1829" y="54"/>
+            <point key="canvasLocation" x="1828.985507246377" y="53.571428571428569"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MfY-gN-8qA">
@@ -91,6 +134,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
