UI Fixes and adding steps in text view.

--- a/Treats/Base.lproj/Main.storyboard
+++ b/Treats/Base.lproj/Main.storyboard
@@ -70,66 +70,67 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MDp-Mn-aQr">
                                         <rect key="frame" x="16" y="16" width="382" height="222"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="222" id="DQK-bn-m11"/>
+                                            <constraint firstAttribute="height" constant="222" id="eoG-fq-Tvk"/>
                                         </constraints>
                                     </imageView>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="RECIPE STEPS GO HERE..." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="eiZ-HE-dBg">
-                                        <rect key="frame" x="16" y="366" width="382" height="436"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" text="RECIPE STEPS GO HERE..." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="eiZ-HE-dBg">
+                                        <rect key="frame" x="16" y="334" width="382" height="468"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="iq7-h5-bE4">
-                                        <rect key="frame" x="37" y="246" width="340" height="100"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="X7G-I9-LLg">
+                                        <rect key="frame" x="58.5" y="261" width="297" height="40"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⏳ 45 Minutes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pga-iD-mK2">
-                                                <rect key="frame" x="0.0" y="0.0" width="130" height="100"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="125" height="40"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="vCg-dQ-roC"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="125" id="0b2-pe-BGS"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Serves: 4" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E4e-Kl-0zZ">
-                                                <rect key="frame" x="175" y="0.0" width="90" height="100"/>
+                                                <rect key="frame" x="151" y="0.0" width="80" height="40"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="gTQ-LW-6Iu"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="saQ-rD-e8I"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="non-veg" translatesAutoresizingMaskIntoConstraints="NO" id="aSr-JM-giY">
-                                                <rect key="frame" x="310" y="0.0" width="30" height="100"/>
+                                                <rect key="frame" x="257" y="0.0" width="40" height="40"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="30" id="zkF-9B-HDF"/>
+                                                    <constraint firstAttribute="height" constant="40" id="ee9-oO-xCA"/>
+                                                    <constraint firstAttribute="width" constant="40" id="gId-A9-RLa"/>
                                                 </constraints>
                                             </imageView>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="eiZ-HE-dBg" firstAttribute="top" secondItem="iq7-h5-bE4" secondAttribute="bottom" constant="20" id="C6g-uC-pim"/>
-                                    <constraint firstItem="MDp-Mn-aQr" firstAttribute="leading" secondItem="HVE-i2-slM" secondAttribute="leading" constant="16" id="Es6-Z7-WqY"/>
-                                    <constraint firstAttribute="trailing" secondItem="MDp-Mn-aQr" secondAttribute="trailing" constant="16" id="FCG-Ru-Gn6"/>
-                                    <constraint firstItem="iq7-h5-bE4" firstAttribute="centerX" secondItem="HVE-i2-slM" secondAttribute="centerX" id="FKR-ZK-F6P"/>
-                                    <constraint firstItem="iq7-h5-bE4" firstAttribute="top" secondItem="MDp-Mn-aQr" secondAttribute="bottom" constant="8" symbolic="YES" id="SVA-eB-BY1"/>
-                                    <constraint firstAttribute="trailing" secondItem="eiZ-HE-dBg" secondAttribute="trailing" constant="16" id="aNI-Ka-Bhk"/>
-                                    <constraint firstItem="MDp-Mn-aQr" firstAttribute="top" secondItem="HVE-i2-slM" secondAttribute="top" constant="16" id="jyN-3q-Sd0"/>
-                                    <constraint firstItem="eiZ-HE-dBg" firstAttribute="leading" secondItem="HVE-i2-slM" secondAttribute="leading" constant="16" id="n5V-V9-uNJ"/>
-                                    <constraint firstAttribute="bottom" secondItem="eiZ-HE-dBg" secondAttribute="bottom" constant="16" id="zPA-wd-4v9"/>
+                                    <constraint firstItem="MDp-Mn-aQr" firstAttribute="leading" secondItem="HVE-i2-slM" secondAttribute="leading" constant="16" id="0Af-Ei-Jt2"/>
+                                    <constraint firstAttribute="bottom" secondItem="eiZ-HE-dBg" secondAttribute="bottom" constant="16" id="9f1-Lu-bzb"/>
+                                    <constraint firstItem="eiZ-HE-dBg" firstAttribute="top" secondItem="X7G-I9-LLg" secondAttribute="bottom" constant="33" id="Z4b-rN-NMv"/>
+                                    <constraint firstItem="X7G-I9-LLg" firstAttribute="top" secondItem="MDp-Mn-aQr" secondAttribute="bottom" constant="23" id="ffa-he-2Oc"/>
+                                    <constraint firstItem="MDp-Mn-aQr" firstAttribute="top" secondItem="HVE-i2-slM" secondAttribute="top" constant="16" id="gVN-iL-aQ2"/>
+                                    <constraint firstAttribute="trailing" secondItem="eiZ-HE-dBg" secondAttribute="trailing" constant="16" id="jKI-Go-YFZ"/>
+                                    <constraint firstItem="X7G-I9-LLg" firstAttribute="centerX" secondItem="HVE-i2-slM" secondAttribute="centerX" id="mBG-JN-grT"/>
+                                    <constraint firstItem="eiZ-HE-dBg" firstAttribute="leading" secondItem="HVE-i2-slM" secondAttribute="leading" constant="16" id="n7e-ye-TJc"/>
+                                    <constraint firstAttribute="trailing" secondItem="MDp-Mn-aQr" secondAttribute="trailing" constant="16" id="yU9-jZ-LO8"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="U7r-q1-j9P"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="HVE-i2-slM" firstAttribute="leading" secondItem="U7r-q1-j9P" secondAttribute="leading" id="3kW-kh-mXh"/>
-                            <constraint firstItem="HVE-i2-slM" firstAttribute="top" secondItem="U7r-q1-j9P" secondAttribute="top" id="IHE-dL-4DS"/>
-                            <constraint firstItem="U7r-q1-j9P" firstAttribute="trailing" secondItem="HVE-i2-slM" secondAttribute="trailing" id="j30-Tz-1Le"/>
-                            <constraint firstItem="U7r-q1-j9P" firstAttribute="bottom" secondItem="HVE-i2-slM" secondAttribute="bottom" id="oCP-fM-zDo"/>
+                            <constraint firstItem="HVE-i2-slM" firstAttribute="leading" secondItem="U7r-q1-j9P" secondAttribute="leading" id="X0Q-09-Mvq"/>
+                            <constraint firstItem="HVE-i2-slM" firstAttribute="top" secondItem="U7r-q1-j9P" secondAttribute="top" id="hxC-aW-Q1Y"/>
+                            <constraint firstItem="HVE-i2-slM" firstAttribute="trailing" secondItem="U7r-q1-j9P" secondAttribute="trailing" id="kzC-K0-Ol0"/>
+                            <constraint firstItem="HVE-i2-slM" firstAttribute="bottom" secondItem="U7r-q1-j9P" secondAttribute="bottom" id="wpr-p2-V61"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="FOh-LX-g2m"/>
@@ -143,7 +144,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kjL-4r-9eg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1828.985507246377" y="53.571428571428569"/>
+            <point key="canvasLocation" x="1890" y="54"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MfY-gN-8qA">
@@ -162,6 +163,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JhY-AP-AoB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="105.79710144927537" y="53.571428571428569"/>
+        </scene>
+        <!--Nutrients View Controller-->
+        <scene sceneID="DTe-OG-FsD">
+            <objects>
+                <viewController storyboardIdentifier="Nutrients" id="2Cf-3K-7Ku" customClass="NutrientsViewController" customModule="Treats" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="v9X-sm-rY3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="xPu-0K-MeH"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iAX-OC-1cu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2792.753623188406" y="53.571428571428569"/>
         </scene>
     </scenes>
     <resources>
